--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -7,6 +7,7 @@
   volume    = {},
   number    = {},
   pages     = {47-54},
+  publisher  = {IEEE},
   doi       = {10.1109/IEEE.EDGE.2017.15}
 }
 
@@ -143,6 +144,7 @@ doi = {10.1057/palgrave.jors.2600523},
   volume    = {},
   number    = {},
   pages     = {647-653},
+  publisher  = {IEEE},
   doi       = {10.1109/INFCOMW.2017.8116453}
 }
 
@@ -235,6 +237,7 @@ doi = {10.1057/palgrave.jors.2600523},
   volume    = {},
   number    = {},
   pages     = {311-314},
+  publisher  = {IEEE},
   doi       = {10.1109/ICUFN.2014.6876803}
 }
 
@@ -316,18 +319,15 @@ doi = {10.1057/palgrave.jors.2600523},
 }
 
 @inproceedings{Wagner-2012,
-author = {Wagner, Stuart and Berg, Eric Van Den and Giacopelli, Jim and Ghetie, Andrei and Burns, Jim and Tauil, Miriam and Sen, Soumya and Wang, Michael and Chiang, Mung and Lan, Tian and Laddaga, Robert and Robertson, Paul and Manghwani, Prakash},
-title = {Autonomous, Collaborative Control for Resilient Cyber Defense (ACCORD)},
-year = {2012},
-isbn = {9780769548951},
-publisher = {IEEE Computer Society},
-address = {USA},
-url = {https://doi.org/10.1109/SASOW.2012.16},
-doi = {10.1109/SASOW.2012.16},
-pages = {39–46},
-numpages = {8},
-keywords = {Nash Bargaining, game theory, distributed resource allocation, cloud computing},
-series = {SASOW '12}
+ author={Wagner, Stuart and Berg, Eric Van Den and Giacopelli, Jim and Ghetie, Andrei and Burns, Jim and Tauil, Miriam and Sen, Soumya and Wang, Michael and Chiang, Mung and Lan, Tian and Laddaga, Robert and Robertson, Paul and Manghwani, Prakash},
+  booktitle={2012 IEEE Sixth International Conference on Self-Adaptive and Self-Organizing Systems Workshops}, 
+  title={Autonomous, Collaborative Control for Resilient Cyber Defense (ACCORD)}, 
+  year={2012},
+  volume={},
+  number={},
+  pages={39-46},
+  publisher  = {IEEE},
+  doi={10.1109/SASOW.2012.16}
 }
 
 @INPROCEEDINGS{Murphy94distributedpricing,
@@ -336,6 +336,21 @@ series = {SASOW '12}
     booktitle = {in Proceedings of the 14th International Teletraffic Congress, edited by J. Labetoulle and J.W. Roberts, Elsevier Science},
     year = {1994},
     pages = {1053--1063},
+}
+
+@incollection{MURPHY19941053,
+title = {Distributed Pricing For Embedded ATM Networks},
+editor = {JACQUES LABETOULLE and JAMES W. ROBERTS},
+series = {Teletraffic Science and Engineering},
+publisher = {Elsevier},
+volume = {1},
+pages = {1053-1063},
+year = {1994},
+booktitle = {The Fundamental Role of Teletraffic in the Evolution of Telecommunications Networks},
+issn = {1388-3437},
+doi = {https://doi.org/10.1016/B978-0-444-82031-0.50108-6},
+url = {https://www.sciencedirect.com/science/article/pii/B9780444820310501086},
+author = {John Murphy and Liam Murphy and Edward C. Posner}
 }
 
 @inproceedings{Chen-SOCC-2014,
