--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -1,7 +1,7 @@
 Congestion pricing and smart data pricing for networking have been
 extensively studied~\cite{Sen-2013}.
 Early work includes congestion pricing by
-Murphy {\em et al.}~\cite{Murphy94distributedpricing},
+Murphy {\em et al.}~\cite{MURPHY19941053},
 and auction-based resource allocation by
 MacKie-Mason {\em et al.}~\cite{pricing-internet-1994}, both in 1994.
 Kelly {\em et al.}~\cite{Kelly-1998} framed congestion pricing in an
@@ -28,7 +28,7 @@ but an auction model is proposed for resource allocation.
 Exponential cost growth as a function of load is well known in packet
 switching networks (e.g., M/M/1 queue and CSMA/CD Ethernet).
 The idea to use such cost functions for resource management
-was in \cite{Murphy94distributedpricing} where
+was in \cite{MURPHY19941053} where
 Murphy {\em et al.} used a cost function for distributed bandwidth
 allocation in ATM networks in 1994.
 Their cost function is a barrier function for utility optimization
