minor update on 6/25

--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -46,8 +46,8 @@ Each microservice is ephemeral and short-lived, and can be executed
 in a stateless container,
 which enables flexible and efficient use of underlying cloud
 resources.
-The concept has something in common with packet switching so that
-it might open up new possibilities to apply packet switching
+The concept has something in common with early packet switching so
+that it might open up new possibilities to apply packet switching
 techniques to handling microservice jobs.
 
 %% energy saving?
