--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -5,6 +5,7 @@
 
 \begin{document}
 
+
 \begin{abstract}
 
     In this paper, we envision future distributed cloud services with
@@ -17,9 +18,9 @@
     We introduce a convex cost function that enables automatic
     load-balancing and idle-resource pooling within the cloud, and allows
     stakeholders to loosely control the utilization of each resource by
-    manipulating the cost function. We examine different cost tuning
-    methods for adjusting utilization, and illustrate their behaviors by
-    simulation.
+    manipulating the cost function and the resource weights of jobs.
+    We examine different cost tuning methods for adjusting
+    utilization, and illustrate their behaviors by simulation.
 
 \end{abstract}
 
