--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -20,7 +20,7 @@ Also, it is necessary to develop mechanisms and protocols for
 discovering available resources~\cite{Albrecht2008} and exchanging
 cost information.
 A path selection mechanism is also needed when assigning a job,
-probably using SRv6 or other source routing mechanism.
+probably using a source routing mechanism.
 
 There exists a rich area for further research:
 One topic is {\bf auto-tuning of the cost functions}.
@@ -43,7 +43,7 @@ The hierarchical model, however, naturally extends to
 an {\bf inter-cloud model} in which different cloud systems are
 federated.
 The mechanism of the idle resource pooling allows utilizing external
-clouds when only needed.
+clouds only when needed.
 
 It would be possible to {\bf crowdsource the resource supply}. 
 Then, we need a monetary charging, authentication and authorization
