minor update on 6/26

--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -52,10 +52,10 @@ For simplicity, we do not distinguish directions of
 communications for $q$ and $r$, and assume only one user and one data
 object per job in this paper.
 
-A job can be optionally associated with weights for the cost
-calculation on $p$, $q$, and $r$: e.g., an interactive job may raise
-the weight for the frontend communication to place the job close to
-the user. In this manner, cloud service providers can speficy which
+A job is specified by a service provider, optionally associated with
+weights, e.g., a service provider may raise the weight for the
+frontend communication to place the job close to the user.
+In this manner, cloud service providers can specify which
 type of resoures have a priority for a specific service without
 overclaiming required resources.
 
