--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -12,7 +12,7 @@ Congestion pricing are also applied to cloud
 computing~\cite{Wang-hotcloud2010,Song-2014,Kilcioglu-SIGMETRICS2015,Song-INFOCOM2017}.
 
 Resource allocation for edge computing and micro data centers also has
-a rich collection of work, most approaches are based on some form of
+a rich collection of work; most approaches are based on some form of
 optimization and many employ auction models.
 The topics are ranging from VM auctions in IaaS for welfare and profit
 maximization~\cite{Xu2017-zenith,Zhang2017-VMauction},
