Complex scenario pots in the article

--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -57,7 +57,7 @@ Another possibility is design a new distributed storage system
 suitable for the cloud morphing model in which (cached) data can be
 easily moved.
 
-Idle-resource pooling is not used for network links in this paper but
+Idle-resource pooling is not used for network links in this paper, but
 it is possible to use it for dynamically creating {\bf Layer 2 paths}
 (e.g., lightpath switching over WDM networks).
 
