--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -56,7 +56,7 @@ A job is specified by a service provider, optionally associated with
 weights, e.g., a service provider may raise the weight for the
 frontend communication to place the job close to the user.
 In this manner, cloud service providers can specify which
-type of resoures have a priority for a specific service without
+type of resources have a priority for a specific service without
 overclaiming required resources.
 
 To instantiate a micro-job requested from a user, the service
@@ -268,7 +268,7 @@ one can raise the cost at $\rho = 0$:
 e.g., to raise the cost at $\rho = 0$ by a factor of $n$,
 $f'(\rho) = n (2\rho - 1)^{2}/(1 - \rho^{n}) + 1$.
 
-A {\bf premium service} can be realized by shifting the cost fuction
+A {\bf premium service} can be realized by shifting the cost function
 to the left so as to have premium jobs being assigned to less loaded
 resources, 
 $f'(\rho) = f(\rho + \Delta)$.
