--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -64,7 +64,7 @@ heterogeneous resources, a cloud service instance emerges at the best
 location and, as the usage pattern changes, the service instance also
 transforms the locations of the resources and their connections.
 
-Microservice jobs are assigned so as to reduce the execution cost that
+Microservice jobs are assigned to reduce the execution cost that
 consists of computing cost, communication cost with the user, access
 cost to database, and other factors.
 For examples, an interactive task will follow the user when the user
@@ -105,10 +105,10 @@ management is assumed.
 To this end, we employ dynamic pricing for decentralized resource
 allocation which works as backpressure against congestion.
 By design, serious congestion never happens in the system as long as
-some of the resources remain available in the resource pool.
+some resources remain available in the resource pool.
 
 We use pseudo cost for manipulating resource allocation.
-Here, pseudo cost is not an actual monetary charge but it is used to
+Here, pseudo cost is not an actual monetary charge, but it is used to
 control resource utilization.
 
 There exist a large body of literature formulating resource allocation
